# movie-picker

./: .gitignore  DEPLOYMENT_GUIDE.md  Makefile  Moveletes  README.md  spec.md  test_event.json
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/src/: app.py  fallback_movies.py  gemini_client.py  local_server.py  validation.py
backend/tests/: test_gemini_client.py  test_openrouter.py  test_static_assets.py  test_validation.py
frontend/: .gitignore  implementation_summary.json  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: CategorySelector.jsx  DifficultySelector.jsx  GetMovieButton.jsx  MovieCard.jsx  ResetButton.jsx
terraform/: .gitignore  example.tfvars  main.tf  terraform.tfvars.example  variables.tf
